--- a/css/styles.css
+++ b/css/styles.css
@@ -44,10 +44,10 @@ img {
   width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
-  outline: 1px solid tomato;
+
 }
 .section {
-  padding: 200;
+  padding: 93px 0;
 }
 /*шапка */
 .header {
@@ -141,9 +141,6 @@ texte lain center .site-nav .active {
   margin: 0 auto;
   margin-bottom: 30px;
 }
-.hero {
-  padding: 200 auto;
-}
 
 .hero-text {
   text-transform: uppercase;
@@ -174,7 +171,15 @@ texte lain center .site-nav .active {
 .section-titel {
   display: flex;
   align-items: center;
+  padding: 95px 0;
 }
+.specifics-list {
+  width: 270px;
+  margin-right: 30px;
+}
+/* .specifics-list:not(:last-child) {
+  margin: 0;
+} */
 .features {
   color: #212121;
 }
@@ -184,8 +189,8 @@ texte lain center .site-nav .active {
   line-height: 1.1;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-
   color: var(--title-text-color);
+  margin-bottom: 10px;
 }
 
 .list-feat {
@@ -202,9 +207,40 @@ texte lain center .site-nav .active {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  text-align: center;
+  margin: 0 auto;
+}
+.they {
+  display: flex;
+  align-items: center;
+}
+.foto {
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+}
+.foto-list {
+  margin-right: 30px;
+}
+.foto-list:last-child {
+  margin: 0;
 }
 
 /* team */
+.team-list {
+  display: flex;
+  align-items: center;
+}
+.team-card {
+  margin-right: 30px;
+}
+.team-card:last-child {
+  margin: 0;
+}
+.team-cart-conteiner{
+  text-align: center;
+  padding: 30px 0;
+}
 .team-titel {
   font-weight: 700;
   font-size: 36px;
@@ -212,6 +248,9 @@ texte lain center .site-nav .active {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 50px;
 }
 
 .team-name {
@@ -231,17 +270,28 @@ texte lain center .site-nav .active {
 /* foter */
 .footer {
   background: var(--fon-color);
+  padding: 60px 0;
 }
 .logo-footer {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
-  /* identical to box height */
-
   letter-spacing: 0.03em;
-
   color: var(--accent-color);
+  margin-bottom: 20px;
+  display: flex;
+}
+.adres-list{
+  display: flex;
+  flex-direction: column;
+
+}
+.adres-list-text{
+  margin-bottom: 10px;
+}
+.adres-list-text:last-child{
+  margin: 0;
 }
 
 .accent-footer {
@@ -307,4 +357,40 @@ texte lain center .site-nav .active {
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.03em;
+}
+.saitt-nav-list .active{
+  color: var(--accent-color);
+}
+.button-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 34px;
+  margin: 0 auto;
+  
+
+}
+.content-proekt{
+  display: flex;
+flex-wrap: wrap;
+
+
+
+
+}
+.content-card{
+  width: calc((100% - 90px) / 3);
+margin-bottom: 30px;
+margin-right: 30px;
+
+}
+.card-text{
+  padding: 20px 24px ;
+
+}
+.button-list{
+  margin-right: 8px;
+}
+.button-list:last-child{
+  margin: 0;
 }
