падіег на кнопки в портфоліо

--- a/css/styles.css
+++ b/css/styles.css
@@ -340,6 +340,7 @@ texte lain center .site-nav .active {
   border-radius: 4px;
   border: none;
   font-family: inherit;
+  padding: 6px 22px;
 }
 
 .button:hover,
@@ -393,6 +394,7 @@ margin-right: 30px;
 }
 .button-list{
   margin-right: 8px;
+
 }
 .button-list:last-child{
   margin: 0;
