--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ h6,
 p {
   margin: 0;
 }
+
 ul {
   margin: 0;
   padding-left: 0;
@@ -37,23 +38,28 @@ li {
 a {
   text-decoration: none;
 }
+
 img {
   display: block;
 }
+ 
 .container {
   width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
 
 }
+
 .section {
   padding: 93px 0;
 }
+
 /*шапка */
 .header {
   padding: 32px 0;
   border-bottom: 1px solid #ECECEC;
 }
+
 .header .container {
   display: flex;
   align-items: center;
@@ -67,14 +73,17 @@ img {
   line-height: 1.2;
   margin-right: 93px;
 }
+
 .nav {
   display: flex;
   align-items: center;
 }
+
 .site-nav {
   display: flex;
   align-items: center;
 }
+
 .saitt-nav-list {
   margin-right: 50px;
 }
@@ -83,12 +92,15 @@ img {
   display: flex;
   align-items: center;
 }
+
 .adres-lin {
   margin-left: auto;
 }
+
 .tel {
   margin-left: 50px;
 }
+
 .accent {
   color: #2196f3;
 }
@@ -171,21 +183,26 @@ texte lain center .site-nav .active {
   display: flex;
   align-items: center;
 }
+
 .section-titel {
   display: flex;
   align-items: center;
   padding: 95px 0;
 }
+
 .specifics-list {
   width: 270px;
   margin-right: 30px;
 }
+
 /* .specifics-list:not(:last-child) {
   margin: 0;
 } */
+
 .features {
   color: #212121;
 }
+
 .titel-features {
   font-weight: 700;
   font-size: 14px;
@@ -213,10 +230,12 @@ texte lain center .site-nav .active {
   text-align: center;
   margin: 0 auto;
 }
+
 .they {
   display: flex;
   align-items: center;
 }
+
 .foto {
   display: flex;
   align-items: center;
@@ -225,6 +244,7 @@ texte lain center .site-nav .active {
 .foto-list {
   margin-right: 30px;
 }
+
 .foto-list:last-child {
   margin: 0;
 }
@@ -234,16 +254,20 @@ texte lain center .site-nav .active {
   display: flex;
   align-items: center;
 }
+
 .team-card {
   margin-right: 30px;
 }
+
 .team-card:last-child {
   margin: 0;
 }
+
 .team-cart-conteiner{
   text-align: center;
   padding: 30px 0;
 }
+
 .team-titel {
   font-weight: 700;
   font-size: 36px;
@@ -270,11 +294,13 @@ texte lain center .site-nav .active {
   line-height: 1.2;
   letter-spacing: 0.03em;
 }
+
 /* foter */
 .footer {
   background: var(--fon-color);
   padding: 60px 0;
 }
+
 .logo-footer {
   font-family: "Raleway";
   font-weight: 700;
@@ -285,14 +311,17 @@ texte lain center .site-nav .active {
   margin-bottom: 20px;
   display: flex;
 }
+
 .adres-list{
   display: flex;
   flex-direction: column;
 
 }
+
 .adres-list-text{
   margin-bottom: 10px;
 }
+
 .adres-list-text:last-child{
   margin: 0;
 }
@@ -319,9 +348,9 @@ texte lain center .site-nav .active {
   line-height: 1.7;
   letter-spacing: 0.03em;
   font-style: normal;
-
   color: rgba(255, 255, 255, 0.6);
 }
+
 .footer-contact:hover,
 .footer-contact:focus {
   color: var(--accent-color);
@@ -362,40 +391,44 @@ texte lain center .site-nav .active {
   line-height: 1.9;
   letter-spacing: 0.03em;
 }
+
 .saitt-nav-list .active{
   color: var(--accent-color);
 }
+
 .button-container{
   display: flex;
   align-items: center;
   justify-content: center;
   padding-bottom: 34px;
   margin: 0 auto;
-  
-
 }
+
 .content-proekt{
   display: flex;
-flex-wrap: wrap;
-margin-right: -30px;
-
-
-
+  flex-wrap: wrap;
+  margin-right: -30px;
+  margin-bottom: -30px;
 }
+
+.card-links{
+  display: block;
+}
+
 .content-card{
   width: calc((100% - 90px) / 3);
-margin-bottom: 30px;
-margin-right: 30px;
-
+  margin-bottom: 30px;
+  margin-right: 30px;
 }
-.card-text{
+
+  .card-text{
   padding: 20px 24px ;
-
 }
-.button-list{
+
+  .button-list{
   margin-right: 8px;
-
 }
-.button-list:last-child{
+
+  .button-list:last-child{
   margin: 0;
 }
